--- a/src/lib/index.scss
+++ b/src/lib/index.scss
@@ -53,6 +53,9 @@
 
 body {
 	margin: 0px;
+	background: rgb(255,255,255);
+	background: linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(238,174,202,0.2945553221288515) 50%, rgba(148,187,233,0.3477766106442577) 100%);
+
 }
 
 * {
@@ -249,6 +252,7 @@ body {
 
 	& a {
 		color: var(--link);
+		text-decoration: none;
 	}
 
 	& :is(code):not(pre code) {
