--- a/src/lib/assets/scss/global.scss
+++ b/src/lib/assets/scss/global.scss
@@ -1,10 +1,16 @@
 @use "./animation";
 @use "./cursor";
+@use "./screenshots";
+@use "./button";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
+
+	--grid-color: rgba(0, 0, 0, 1);
+	--font: ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
+
 	--dark-0: #000;
 	--dark-1: #1e1e1e;
 	--dark-2: #2e2e2e;
@@ -146,9 +152,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 a {
 	color: var(--main);
+	transition: all 0.2s ease-in;
 	&:hover {
-		color: red;
-		background-color: hsla(0, 0%, 100%);
+		letter-spacing: 0.2rem;
 	}
 }
 
@@ -235,4 +241,8 @@ a {
 	height: 2px;
 	transition: width 400ms ease;
 	width: 0;
+}
+
+img {
+	display: block;
 }
