--- a/src/lib/assets/scss/global.scss
+++ b/src/lib/assets/scss/global.scss
@@ -33,12 +33,12 @@ body {
 	margin: 0px;
 	font-family: var(--font-mono);
 	background: lab(99 0 0 / 0.77) 50%;
-	background: linear-gradient(
-		154deg,
-		lab(55 -13.67 -50.83) 0%,
-		lab(99 0 0 / 0.77) 50%,
-		lab(80 21.83 94.48 / 0.51) 100%
-	);
+	// background: linear-gradient(
+	// 	154deg,
+	// 	lab(55 -13.67 -50.83) 0%,
+	// 	lab(99 0 0 / 0.77) 50%,
+	// 	lab(80 21.83 94.48 / 0.51) 100%
+	// );
 	overflow-x: hidden;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
