give up on svelte

--- a/src/lib/assets/scss/global.scss
+++ b/src/lib/assets/scss/global.scss
@@ -16,6 +16,7 @@
 
 :root {
 	--primary: hsl(0 0 12, 100%);
+	--secondary: red;
 	--background: hsl(0 0 99, 100%);
 	--grid-padding: 2rem;
 	--header-height: 4rem;
