--- a/src/index.css
+++ b/src/index.css
@@ -10,10 +10,17 @@
 }
 
 :root {
-  --primary: #1e1e1e;
-  --secondary: red;
-  --color-captions: #ffd900;
-  --background: #fdfdfd;
+  --primary: rgb(30, 30, 30); /*  400 */
+  --primary-200: rgb(65, 65, 65);
+  --primary-400: var(--primary); /*  alias */
+  --secondary: rgb(255, 0, 0);
+  --secondary-400: var(--secondary); /*  alias */
+  --secondary-600: rgb(207, 24, 0);
+  --accent: rgb(255, 217, 0);
+  --accent-600: rgb(197, 161, 0);
+  --color-captions: rgb(255, 217, 0); /* deprecated */
+  --background: rgb(253, 253, 253);
+  --background-600: rgb(212, 212, 212);
   --grid-padding: 2rem;
   --header-height: 4rem;
   --content-margin-left: 0;
@@ -115,4 +122,48 @@ p {
   .hidden--mobile {
     display: none;
   }
+}
+
+.scrollable {
+  overflow-y: scroll;
+  overflow-x: hidden;
+  height: 100%;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+/* Scrollbar styles for WebKit browsers */
+.scrollable::-webkit-scrollbar {
+  border-radius: 0.25rem;
+  width: 0;
+}
+
+.scrollable::-webkit-scrollbar-thumb {
+  background-color: var(--accent-600);
+  border-radius: 0.25rem;
+}
+
+.scrollable::-webkit-scrollbar-thumb:hover {
+  background-color: var(--primary);
+}
+
+.scrollable::-webkit-scrollbar-track {
+  border-radius: 0.25rem;
+  background-color: transparent;
+}
+
+.scrollable--hint::-webkit-scrollbar-track {
+  background-color: hsl(250 15% 90%);
+}
+
+.scrollable--hint::-webkit-scrollbar-thumb {
+  background-color: hsl(250 15% 85%);
+}
+
+.scrollable--hint:hover::-webkit-scrollbar-track {
+  background-color: hsl(250 15% 85%);
+}
+
+.scrollable--hint:hover::-webkit-scrollbar-thumb {
+  background-color: hsl(250 15% 70%);
 }
