--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1,59 +1,3 @@
-/* TODO: PATH HAS TO BE RELATIVE TO THE ROOT OF THE PROJECT 
-  remember when deploying to github
-*/
-@font-face {
-  font-family: Till-Normal;
-  src: url(/fonts/Till-Normal.woff);
-  src:
-    url(/fonts/Till-Normal.woff2) format('woff2'),
-    url(/fonts/Till-Normal.woff) format('woff');
-}
-
-:root {
-  --primary: rgb(30, 30, 30); /*  400 */
-  --primary-200: rgb(65, 65, 65);
-  --primary-400: var(--primary); /*  alias */
-  --secondary: rgb(255, 0, 0);
-  --secondary-400: var(--secondary); /*  alias */
-  --secondary-600: rgb(207, 24, 0);
-  --accent: rgb(255, 217, 0);
-  --accent-600: #c67700;
-  --color-captions: rgb(255, 217, 0); /* deprecated */
-  --background: rgb(253, 253, 253);
-  --background-600: rgb(212, 212, 212);
-  --background-accent-gradient: linear-gradient(
-    90deg,
-    var(--accent) 0%,
-    var(--accent-600) 100%
-  );
-  --grid-padding: 2rem;
-  --header-height: 4rem;
-  --content-margin-left: 0;
-  --content-width: 1728px;
-
-  --grid-color: rgba(0, 0, 0, 1);
-  --font-mono: 'Till-Normal', ui-monospace, SFMono-Regular, Menlo, Monaco,
-    Consolas, 'Liberation Mono', 'Courier New', monospace;
-  --font-sans-serif: system-ui, sans-serif;
-  --font-serif: 'Till-Normal', serif;
-
-  overflow-y: scroll;
-}
-
-@media (max-width: 1350px) {
-  :root {
-    --grid-padding: 2rem;
-    --content-margin-left: 0;
-  }
-}
-
-@media (max-width: 850px) {
-  :root {
-    --grid-padding: 1rem;
-    --content-margin-left: 0;
-  }
-}
-
 html {
   font-size: 16px;
   line-height: 1.125;
@@ -71,7 +15,7 @@ h4,
 h5,
 h6 {
   margin: 0;
-  font-family: var(--font-serif);
+  font-family: var(--font);
   font-weight: 400;
 }
 strong {
@@ -87,7 +31,7 @@ body {
   margin: 0;
   font-family: 'Inter', sans-serif;
   background: var(--background);
-  font: 1rem var(--font-serif);
+  font: 1rem var(--font);
 }
 a {
   color: var(--main);
@@ -99,7 +43,7 @@ a:hover {
 }
 
 p {
-  font: 1rem var(--font-serif);
+  font: 1rem var(--font);
 }
 
 .noselect {
