--- a/src/assets/css/variables.css
+++ b/src/assets/css/variables.css
@@ -20,6 +20,7 @@
   --content-margin-left: 0;
   --content-width: 1728px;
   --feature-project-header-height: 9.5rem;
+  --accordion-color: var(--primary);
 
   --aero-blue: #aaffe0;
   --pantone-blue-0821-c: #aaffe0;
